--- a/GuardianCapitalLLC/GuardianCapitalLLC.csproj
+++ b/GuardianCapitalLLC/GuardianCapitalLLC.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="App_Data\Uploads\" />
+  </ItemGroup>
+
 </Project>
