--- a/GuardianCapitalLLC/appsettings.json
+++ b/GuardianCapitalLLC/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=GuardianCapitalLLC;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "Mailjet": {
+    "PublicKey": "cc3b6b1d2f3638606a1856b1d3bb1c49",
+    "PrivateKey": "63b3a5568e8155958e2bdd8c00bc5fbb",
+    "FromEmail": "no-reply@guardiancapitolllc.com",
+    "FromName": "GuardianCapitolLLC",
+  },
 }
