Commit include ourclients

--- a/GuardianCapitalLLC/GuardianCapitalLLC.csproj
+++ b/GuardianCapitalLLC/GuardianCapitalLLC.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Folder Include="App_Data\Uploads\" />
+	<Folder Include="App_Data\OurClients\" />
   </ItemGroup>
 
 </Project>
