--- a/GuardianCapitalLLC/GuardianCapitalLLC.csproj
+++ b/GuardianCapitalLLC/GuardianCapitalLLC.csproj
@@ -26,10 +26,23 @@
 	<ItemGroup>
 		<Folder Include="App_Data\Uploads\" />
 		<Folder Include="App_Data\OurClients\" />
+		<Folder Include="App_Data\Forms\" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Include="App_Data\Uploads\**\*.*">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
 		<Content Include="App_Data\OurClients\**\*.*">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Include="App_Data\Forms\**\*.*">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
 	</ItemGroup>
