--- a/GuardianCapitalLLC/appsettings.Development.json
+++ b/GuardianCapitalLLC/appsettings.Development.json
@@ -3,7 +3,7 @@
     "Name": "TestDb"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=104.236.20.77;Port=3306;Database=pfmjxnxybh;User=pfmjxnxybh;Password=3Rkn9pPfYa;"
+    "DefaultConnection": "Server=localhost;Port=3306;Database=guardiancapitalllctest;Uid=root;Pwd=djwq!@#!Ewqeq;"
   },
   "DetailedErrors": true,
   "Logging": {
