--- a/GuardianCapitalLLC/GuardianCapitalLLC.csproj
+++ b/GuardianCapitalLLC/GuardianCapitalLLC.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.5.0" />
     <PackageReference Include="Hangfire" Version="1.8.20" />
     <PackageReference Include="Hangfire.MySqlStorage" Version="2.0.3" />
     <PackageReference Include="Mailjet.Api" Version="3.0.0" />
