--- a/GuardianCapitalLLC/appsettings.Development.json
+++ b/GuardianCapitalLLC/appsettings.Development.json
@@ -13,6 +13,6 @@
     }
   },
   "AppSettings": {
-    "FrontendBaseUrl": "https://localhost:7270"
+    "FrontendBaseUrl": "https://site2.localhost:7270"
   }
 }
